[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["oferAshkenazy <adaofer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
